<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hours_abbrev">hh</string>
    <string name="double_dot">:</string>
    <string name="minutes_abbrev">mm</string>
    <string name="tpicker_title">Choose an hour</string>
    <string name="time_config_title_tpl">When do you usually have %1$s?</string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="transition_card" translatable="false">card_transition</string>
    <string-array name="transitions">
        <item>first_card</item>
        <item>second_card</item>
        <item>third_card</item>
    </string-array>
    <string name="done">Done</string>
    <string name="set_time">Set time</string>
    <string name="fill_hours">Please, fill out all the hours</string>
    <string name="graphics">graphics</string>
    <string name="slide_policy_text">By clicking here you accept the
        terms and conditions of the application</string>
    <string name="accept_policy">You need to agree to the privacy
        policy in order to continue using this application</string>
    <string name="first_slide_title">Handwashing reminder</string>
    <string name="first_slide_desc">Do you know how crucial it can be
        washing your hands so you can avoid some diseases? With this app, you
        will never forget it 😉
    </string>
    <string name="second_slide_title">Custom hours</string>
    <string name="second_slide_desc">Customize your experience with an
        schedule about when you usually do certain actions so you can be
        notified when you should wash your hands</string>
    <string name="fourth_slide_title">Be even more precise</string>
    <string name="fourth_slide_desc">If you allow access to user activity,
        you will receive notifications when, for example, you get off from a
        vehicle 🚇 or after running 🤼‍♂️. You can disable this option at any
        moment</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="data_shared">{gmd_info_outline} Despite of the
        configuration above, some data will still be shared. This data
        contains information about possible application crashes or errors. It
        is always anonymous and will help me update the app, include
        new features and solve errors.</string>
    <string name="autostart_permission_title">Autostart permission
        required</string>
    <string name="autostart_permission">We have detected you are
        running a customized UI. For getting notifications on time,
        please gran the app to autostart automatically (this option
        will not waste your battery)</string>
    <string name="accept">Accept</string>
</resources>